--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.546.0",
     "mailtrap": "^4.3.0",
-    "next": "15.5.6",
-    "next-auth": "5.0.0-beta.29",
+    "next": "16.1.1",
+    "next-auth": "4.24.13",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.9",
     "pg": "^8.16.3",
