--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "recharts": "2.15.4",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ws": "^8.18.3",
@@ -52,6 +53,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "prisma": "^7.2.0",
